# myros_ws

./: .gitignore  README.md  myagv.rosinstall
agv_explore/: CMakeLists.txt  README.md  package.xml
agv_explore/config/: local_gas.rviz  navigation.rviz  patrol.rviz
agv_explore/doc/: agv_nav.md  create_map.md  local.md  memo.md  simulation.md  uav_nav.md
agv_explore/scripts/: get_co2.py  (+13 more)
cooperative_patrol/: CMakeLists.txt  README.md  bgp_plugin.xml  package.xml
gas_distribution/: CMakeLists.txt  package.xml
turtlebot3_explore/: CMakeLists.txt  README.md  package.xml
turtlebot3_explore/config/: gas_explore.rviz  gas_visualize.rviz  global_gas.rviz
turtlebot3_explore/launch/: aibot_bringup.launch  aibot_gas_explore.launch  bagplay.launch  bringup.launch  gas_explore.launch  gas_explore_unstable.launch  gas_explore_unsteady.launch  gas_mapping.launch  gas_patrol.launch  real_gas_mapping.launch  record.launch  recordAll.launch  rviz_display.launch
turtlebot3_explore/msg/: PositionAndGas.msg
turtlebot3_explore/param/: aibot_demo.yaml  aibot_demo_2.yaml  debug_points.yaml  fine_search_points.yaml  simple_relay_points.yaml  turtlebot3_full_relay_points.yaml
turtlebot3_explore/param/navigation/: base_local_planner_default_params.yaml  global_costmap_params.yaml  move_base_params.yaml
turtlebot3_explore/scripts/: aibot_gas_explore.py  costmap_visualize.py  gas_distributer.py  gas_explore.py  gas_mapping.py  gas_patrol.py  gas_roughly_search.py  gas_scrutinize.py  get_co2.py  get_tvoc.py  simple_explore.py
uav_explore/: CMakeLists.txt  README.md  package.xml
(+146 files in other folders)
